Fix rendering bugs on small screen

--- a/aidants_connect_habilitation/static/scss/main-habilitation.scss
+++ b/aidants_connect_habilitation/static/scss/main-habilitation.scss
@@ -26,6 +26,10 @@ svg.previews {
   display: none;
 }
 
+#main {
+  overflow: hidden;
+}
+
 // Accessibility ------------------------------------------------------
 
 :focus-visible {
@@ -71,6 +75,7 @@ h1, .h1 {
   color: $red-aidants;
   margin: 2.5rem 0;
   text-transform: uppercase;
+  line-height: 1.25;
 
   + .subtitle {
     font-size: 1.5rem;
